exports[`BpkFormValidation should render correctly 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }>
  <div>
    <div
      className="bpk-form-validation bpk-form-validation--appear"
      id="my-form-validation">
      A validation message.
    </div>
  </div>
</div>
`;

exports[`BpkFormValidation should render correctly with "expanded" equal to false 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": 0,
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }>
  <div>
    <div
      className="bpk-form-validation"
      id="my-form-validation">
      A validation message.
    </div>
  </div>
</div>
`;
